2022-02-16  Adrian Perez de Castro  <aperez@igalia.com>

        [CMake] Cannot find OpenGL when system provides opengl.pc instead of gl.pc
        https://bugs.webkit.org/show_bug.cgi?id=236592

        Reviewed by Don Olmstead.

        * CMakeLists.txt: Remove usage of the OPENGL_ variables for the WebKit target, which is
        uneeded because it links to WebCore, which transitively pulls the needed libraries now
        that imported targets are being used.

2022-02-16  Jer Noble  <jer.noble@apple.com>

        [Cocoa] Adopt -streamDataParser:didProvideContentKeySpecifier:forTrackID: delegate callback
        https://bugs.webkit.org/show_bug.cgi?id=236109

        Reviewed by Eric Carlson.

        Add the newly requried virtual method changes to MediaSample subclasses, and use
        SharedBuffer rather than Uint8Array.

        * GPUProcess/media/RemoteMediaPlayerProxy.cpp:
        (WebKit::RemoteMediaPlayerProxy::mediaPlayerKeyNeeded):
        * GPUProcess/media/RemoteMediaPlayerProxy.h:
        * Shared/mac/MediaFormatReader/MediaFormatReader.cpp:
        (WebKit::MediaFormatReader::parseByteSource):
        (WebKit::MediaFormatReader::didProvideMediaData):
        * Shared/mac/MediaFormatReader/MediaFormatReader.h:
        * Shared/mac/MediaFormatReader/MediaSampleByteRange.h:
        * WebProcess/GPU/media/MediaPlayerPrivateRemote.cpp:
        (WebKit::MediaPlayerPrivateRemote::mediaPlayerKeyNeeded):

2022-02-16  Stephan Szabo  <stephan.szabo@sony.com>

        [PlayStation] Build fix after r289872
        https://bugs.webkit.org/show_bug.cgi?id=236716

        Unreviewed build fix

        Add Webcore/Frame.h to include set

        * WebProcess/Geolocation/WebGeolocationManager.cpp:

2022-02-16  Per Arne Vollan  <pvollan@apple.com>

        [macOS] Add access to mach service in the Networking process for all users
        https://bugs.webkit.org/show_bug.cgi?id=236653
        <rdar://88787266>

        Reviewed by Chris Dumez.
