@@ -1,3 +1,14 @@
+2022-02-16  Tim Horton  <timothy_horton@apple.com>
+
+        Add an additions point for `shouldRecognizeSimultaneouslyWithGestureRecognizer`
+        https://bugs.webkit.org/show_bug.cgi?id=236724
+
+        Reviewed by Wenson Hsieh.
+
+        * UIProcess/ios/WKContentViewInteraction.mm:
+        (-[WKContentView _shouldAdditionallyRecognizeGestureRecognizer:simultaneouslyWithGestureRecognizer:]):
+        (-[WKContentView gestureRecognizer:shouldRecognizeSimultaneouslyWithGestureRecognizer:]):
+
 2022-02-16  Adrian Perez de Castro  <aperez@igalia.com>
 
         [CMake] Cannot find OpenGL when system provides opengl.pc instead of gl.pc
